--- a/views/account.html
+++ b/views/account.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 <title>Home</title>
-<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
+<link href="/static/css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="js/jquery.min.js"></script>
+<script src="/static/js/jquery.min.js"></script>
 <!-- Custom Theme files -->
 <!--theme-style-->
-<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />	
+<link href="/static/css/style.css" rel="stylesheet" type="text/css" media="all" />
 <!--//theme-style-->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -18,8 +18,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <link href='http://fonts.useso.com/css?family=Rokkitt:400,700' rel='stylesheet' type='text/css'>
 <link href='http://fonts.useso.com/css?family=Lobster+Two:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
 <!--//fonts-->
-<script type="text/javascript" src="js/move-top.js"></script>
-<script type="text/javascript" src="js/easing.js"></script>
+<script type="text/javascript" src="/static/js/move-top.js"></script>
+<script type="text/javascript" src="/static/js/easing.js"></script>
 <script type="text/javascript">
 					jQuery(document).ready(function($) {
 						$(".scroll").click(function(event){		
@@ -61,7 +61,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<span class="menu"> </span>
 					<ul>
 						<li  ><a href="index.html" >Home  </a><label>- </label> </li>
-						<li class="active"><a href="location.html" > Locations</a><label>- </label></li>
+						<li><a href="location.html" > Locations</a><label>- </label></li>
 						<li><a href="specials.html">Specials </a><label>- </label></li>
 						<li><a href="404.html" > Order Online</a><label>- </label></li>
 						<li><a href="contact.html">Contacts</a></li>
@@ -87,62 +87,30 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	</div>
 	<!---->
 	<div class="container">
-				<div class="contact">
-				<div class="contact-in">
-				<h2>Locations</h2>
-				 <div class="col-md-6 map">
-				 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d505145.6949089349!2d115.07157704999999!3d-8.455471450000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd22f7520fca7d3%3A0x2872b62cc456cd84!2sBali%2C+Indonesia!5e0!3m2!1sen!2sin!4v1418170815897"></iframe>
-				</div>
-				<div class="col-md-6 map">
-				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4930612.6595466975!2d-1.9770328999999998!3d52.88495655!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d0a98a6c1ed5df%3A0xf4e19525332d8ea8!2sEngland%2C+UK!5e0!3m2!1sen!2sin!4v1423220714865" ></iframe>
-				</div>
-				<div class="col-md-6 map">
-				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29266055.39814807!2d133.28132295!3d-26.43907425!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2b2bfd076787c5df%3A0x538267a1955b1352!2sAustralia!5e0!3m2!1sen!2sin!4v1423220758088"></iframe>
-				</div>
-				<div class="col-md-6 map">
-				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3311093.540572555!2d127.09640499999999!3d35.8615124!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x356455ebcb11ba9b%3A0x91249b00ba88db4b!2sSouth+Korea!5e0!3m2!1sen!2sin!4v1423220818102" ></iframe>
-				</div>
-					  <div class="clearfix"></div>
-				 </div>
-				 <div class="contact-on">
-				 <div class=" col-md-9 contact-left">
-				  
-					    <form >
-					    	<div>
-						    	<span>Name</span>
-						    	<input name="userName" type="text" class="textbox">
-						    </div>
-						    <div>
-						    	<span>E-Mail</span>
-						    	<input name="userEmail" type="text" class="textbox">
-						    </div>
-						    <div>
-						    	<span>Subject</span>
-						    	<textarea name="userMsg"> </textarea>
-						    </div>
-						   <div>
-						   		<span><input type="submit" value="Submit"></span>
-						  </div>
-					    </form>
-				  </div>
-
-				<div class=" col-md-3 contact-right">
-				     	<h5>Company Information</h5>
-						    	<p>500 Lorem Ipsum Dolor Sit,</p>
-						   		<p>22-56-2-9 Sit Amet, Lorem,</p>
-						   		<p>USA</p>
-				   		<p>Phone:(00) 222 666 444</p>
-				   		<p>Fax: (000) 000 00 00 0</p>
-				 	 	<p>Email: <a href="mailto:info@mycompany.com">info@mycompany.com</a></p>
-				   		<p>Follow on: <a href="#">Facebook</a>, <a href="#">Twitter</a></p>
-				    </div>
-				
-			    
-				<div class="clearfix"></div>
-				</div>
-      		</div>
-		    </div>
-
+		<div class="account">
+		<h2>Account</h2>
+			<form>
+			<div>
+				<span>First Name</span>
+				<input type="text">
+			</div> 	
+			<div>			
+				<span class="name-in">Last Name</span>
+				<input type="text"> 
+			</div>			
+			<div> 	
+				<span class="mail">Email</span>
+				<input type="text"> 
+			</div>
+			<div> 
+				<span class="word">Password</span>
+				<input type="password">
+			</div>				
+				<input type="submit" value="Login"> 
+			</form>
+		</div>
+	
+	</div>
 
 	<!---->
 	<div class="footer">
@@ -181,6 +149,7 @@ uspendisse venenatis dolor et nunc iaculis ege</p>
 						});
 					</script>
 				<a href="#" id="toTop" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
+
 
 </body>
 </html>
