--- a/views/index.html
+++ b/views/index.html
@@ -4,12 +4,12 @@
 <html>
 <head>
 <title>Home</title>
-<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
+<link href="/static/css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="js/jquery.min.js"></script>
+<script src="/static/js/jquery.min.js"></script>
 <!-- Custom Theme files -->
 <!--theme-style-->
-<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+<link href="/static/css/style.css" rel="stylesheet" type="text/css" media="all" />
 <!--//theme-style-->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -20,8 +20,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <link href='http://fonts.useso.com/css?family=Rokkitt:400,700' rel='stylesheet' type='text/css'>
 <link href='http://fonts.useso.com/css?family=Lobster+Two:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
 <!--//fonts-->
-<script type="text/javascript" src="js/move-top.js"></script>
-<script type="text/javascript" src="js/easing.js"></script>
+<script type="text/javascript" src="/static/js/move-top.js"></script>
+<script type="text/javascript" src="/static/js/easing.js"></script>
 				<script type="text/javascript">
 					jQuery(document).ready(function($) {
 						$(".scroll").click(function(event){
@@ -55,7 +55,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<ul>
 						<li class="active" ><a href="index.html" >主页  </a><label>- </label> </li>
 						<li><a href="location.html" > 全部信息</a><label>- </label></li>
-						<li><a href="publish.html">发布信息 </a><label></li>
+						<li><a href="specials.html">发布信息 </a><label></li>
 					</ul>
 					<!--script-->
 				<script>
@@ -109,7 +109,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
 		</div>
 		<!---->
-		  <script src="js/jquery.wmuSlider.js"></script>
+		  <script src="/static/js/jquery.wmuSlider.js"></script>
 			  <script>
        			$('.example1').wmuSlider({
 					 pagination : false,
@@ -130,7 +130,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="col-md-8 food-grid">
 				<div class="cup">
 					<div class="col-md-4 cup-in">
-						<a href="single.html"><img src="images/p1.jpg" class="img-responsive" alt=""></a>
+						<a href="single.html"><img src="/static/images/p1.jpg" class="img-responsive" alt=""></a>
 						<p>明天在天府一街会有烤肉聚会，欢迎大家</p>
 						<span class="dollar">10XEM</span>
 						<div class="details-in">
@@ -139,7 +139,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<div class="clearfix"> </div>
 					</div>
 					<div class="col-md-4 cup-in">
-						<a href="single.html"><img src="images/p2.jpg" class="img-responsive" alt=""></a>
+						<a href="single.html"><img src="/static/images/p2.jpg" class="img-responsive" alt=""></a>
 						<p>明天在天府一街会有烤肉聚会，欢迎大家</p>
 						<span class="dollar">10XEM</span>
 						<div class="details-in">
@@ -148,7 +148,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<div class="clearfix"> </div>
 					</div>
 					<div class="col-md-4 cup-in">
-						<a href="single.html"><img src="images/p3.jpg" class="img-responsive" alt=""></a>
+						<a href="single.html"><img src="/static/images/p3.jpg" class="img-responsive" alt=""></a>
 						<p>明天在天府一街会有烤肉聚会，欢迎大家</p>
 						<span class="dollar">10XEM</span>
 						<div class="details-in">
@@ -158,7 +158,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 
 					<div class="col-md-4 cup-in">
-						<a href="single.html"><img src="images/p4.jpg" class="img-responsive" alt=""></a>
+						<a href="single.html"><img src="/static/images/p4.jpg" class="img-responsive" alt=""></a>
 						<p>明天在天府一街会有烤肉聚会，欢迎大家</p>
 						<span class="dollar">10XEM</span>
 						<div class="details-in">
@@ -167,7 +167,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<div class="clearfix"> </div>
 					</div>
 					<div class="col-md-4 cup-in">
-						<a href="single.html"><img src="images/p5.jpg" class="img-responsive" alt=""></a>
+						<a href="single.html"><img src="/static/images/p5.jpg" class="img-responsive" alt=""></a>
 						<p>明天在天府一街会有烤肉聚会，欢迎大家</p>
 						<span class="dollar">10XEM</span>
 						<div class="details-in">
@@ -176,7 +176,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<div class="clearfix"> </div>
 					</div>
 					<div class="col-md-4 cup-in">
-						<a href="single.html"><img src="images/p6.jpg" class="img-responsive" alt=""></a>
+						<a href="single.html"><img src="/static/images/p6.jpg" class="img-responsive" alt=""></a>
 						<p>明天在天府一街会有烤肉聚会，欢迎大家</p>
 						<span class="dollar">10XEM</span>
 						<div class="details-in">
@@ -192,7 +192,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<a href="single.html" class="more">浏览更多</a>
 						<div class="clearfix"> </div>
 						<div class="arrow">
-							<a href="#"><img src="images/arrow.png" alt=""></a>
+							<a href="#"><img src="/static/images/arrow.png" alt=""></a>
 						</div>
 					</div>
 				<!---->
