--- a/views/checkout.html
+++ b/views/checkout.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 <title>Home</title>
-<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
+<link href="/static/css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="js/jquery.min.js"></script>
+<script src="/static/js/jquery.min.js"></script>
 <!-- Custom Theme files -->
 <!--theme-style-->
-<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />	
+<link href="/static/css/style.css" rel="stylesheet" type="text/css" media="all" />
 <!--//theme-style-->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -18,9 +18,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <link href='http://fonts.useso.com/css?family=Rokkitt:400,700' rel='stylesheet' type='text/css'>
 <link href='http://fonts.useso.com/css?family=Lobster+Two:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
 <!--//fonts-->
-<script type="text/javascript" src="js/move-top.js"></script>
-<script type="text/javascript" src="js/easing.js"></script>
-<script type="text/javascript">
+<script type="text/javascript" src="/static/js/move-top.js"></script>
+<script type="text/javascript" src="/static/js/easing.js"></script>
+				<script type="text/javascript">
 					jQuery(document).ready(function($) {
 						$(".scroll").click(function(event){		
 							event.preventDefault();
@@ -30,7 +30,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</script>
 
 </head>
-<body>
+<body> 
 	<!--header-->
 	<div class="header-in">
 		<div class="container">
@@ -41,7 +41,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="header-top-in">
 					<ul class="header-grid">
 						<li ><a href="account.html">My Account   </a> <label>/</label></li>
-						<li  ><a href="login.html">  Login </a> </li>		
+						<li ><a href="login.html">  Login </a> </li>		
 					</ul>
 					<div class="act">
 						<a href="#" class="done">Donec actortor </a>
@@ -63,7 +63,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<li  ><a href="index.html" >Home  </a><label>- </label> </li>
 						<li><a href="location.html" > Locations</a><label>- </label></li>
 						<li><a href="specials.html">Specials </a><label>- </label></li>
-						<li><a href="404.html" > Order Online</a><label>- </label></li>
+						<li class="active1"><a href="404.html" > Order Online</a><label>- </label></li>
 						<li><a href="contact.html">Contacts</a></li>
 					</ul>
 					<!--script-->
@@ -82,28 +82,17 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 			<div class="clearfix"> </div>
 		</div>
+		<!---->
 		
 		</div>
 	</div>
 	<!---->
 	<div class="container">
-		<div class="account">
-		<h2>Login</h2>
-			<form>
-			<div>
-				<span>User Name</span>
-				<input type="text"> 				
-			</div>
-			<div>
-				<span class="word-in">Password</span>
-				<input type="password"> 
-			</div>
-				<a class="forgot" href="#">Forgot Your Password?</a>
-				<input type="submit" value="Login"> 
-			</form>
+		 <div class="register-account">
+    	     <h4 class="title">Shopping cart is empty</h4>
+    	     <p class="cart">You have no items in your shopping cart.<br>Click<a href="index.html"> here</a> to continue shopping</p>
+    	   </div>
 		</div>
-	
-	</div>
 
 	<!---->
 	<div class="footer">
