--- a/views/login.html
+++ b/views/login.html
@@ -1,85 +1,148 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>Login</title>
-    <link rel="stylesheet" href="/static/plug/layui/css/layui.css">
-    <style>
-
-        .main {
-            margin: 0 auto;
-            width: 400px;
-            border: 1px solid;
-            border-color: #eeeeee;
-            border-radius: 5px;
-            margin-top: 100px;
-        }
-    </style>
+<title>Home</title>
+<link href="/static/css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="/static/js/jquery.min.js"></script>
+<!-- Custom Theme files -->
+<!--theme-style-->
+<link href="/static/css/style.css" rel="stylesheet" type="text/css" media="all" />
+<!--//theme-style-->
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="keywords" content="Food shop Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template, 
+Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
+<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
+<!--fonts-->
+<link href='http://fonts.useso.com/css?family=Rokkitt:400,700' rel='stylesheet' type='text/css'>
+<link href='http://fonts.useso.com/css?family=Lobster+Two:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
+<!--//fonts-->
+<script type="text/javascript" src="/static/js/move-top.js"></script>
+<script type="text/javascript" src="/static/js/easing.js"></script>
+<script type="text/javascript">
+					jQuery(document).ready(function($) {
+						$(".scroll").click(function(event){		
+							event.preventDefault();
+							$('html,body').animate({scrollTop:$(this.hash).offset().top},1000);
+						});
+					});
+					</script>
 
 </head>
 <body>
-<script type="text/javascript" src="/static/plug/layui/layui.js"></script>
-<div class="main layui-clear">
-    <form action="/login" method="post">
-        <div class="fly-panel fly-panel-user" pad20>
-            <div class="layui-tab layui-tab-brief">
-                <ul class="layui-tab-title">
-                    <li class="layui-this">Account Login</li>
-                </ul>
-                <div class="layui-form layui-tab-content" id="LAY_ucm" style="padding-top: 20px; padding-left: 50px;  ">
+	<!--header-->
+	<div class="header-in">
+		<div class="container">
+			<div class="logo">
+				<h1><a href="index.html">Food Shop</a></h1>
+			</div>
+			<div class="header-top">
+				<div class="header-top-in">
+					<ul class="header-grid">
+						<li ><a href="account.html">My Account   </a> <label>/</label></li>
+						<li  ><a href="login.html">  Login </a> </li>		
+					</ul>
+					<div class="act">
+						<a href="#" class="done">Donec actortor </a>
+					</div>
+				<div class="clearfix"> </div>
+				</div>
+				<ul class="grid-header">
+					<li><a href="account.html">My Account</a> <label>/</label></li>
+					<li><a href="#">My Cart</a> <label>/</label></li>
+					<li><a href="checkout.html">  Checkout </a> </li>		
+				</ul>
+				<div class="clearfix"> </div>
+			</div>
+			<!---->
+			<div class="header-bottom">
+				<div class="top-nav">
+					<span class="menu"> </span>
+					<ul>
+						<li  ><a href="index.html" >Home  </a><label>- </label> </li>
+						<li><a href="location.html" > Locations</a><label>- </label></li>
+						<li><a href="specials.html">Specials </a><label>- </label></li>
+						<li><a href="404.html" > Order Online</a><label>- </label></li>
+						<li><a href="contact.html">Contacts</a></li>
+					</ul>
+					<!--script-->
+				<script>
+					$("span.menu").click(function(){
+						$(".top-nav ul").slideToggle(500, function(){
+						});
+					});
+			</script>
+				</div>
+					<div class="search">
+						<form>
+							<input type="text" value="Search store here ..." onfocus="this.value = '';" onblur="if (this.value == '') {this.value = '';}" >
+							<input type="submit" value="">
+						</form>
+					</div>
+			<div class="clearfix"> </div>
+		</div>
+		
+		</div>
+	</div>
+	<!---->
+	<div class="container">
+		<div class="account">
+		<h2>Login</h2>
+			<form>
+			<div>
+				<span>User Name</span>
+				<input type="text"> 				
+			</div>
+			<div>
+				<span class="word-in">Password</span>
+				<input type="password"> 
+			</div>
+				<a class="forgot" href="#">Forgot Your Password?</a>
+				<input type="submit" value="Login"> 
+			</form>
+		</div>
+	
+	</div>
 
-                    <div class="layui-form layui-form-pane">
+	<!---->
+	<div class="footer">
+		<div class="container">
+		<div class="col-md-8 footer-bottom ">
+		<h4>Aenean condimentum suscipit dolor</h4>
+		<p>Proin ullamcorper urna quis velit mollis molestie suscipit nisl consectetur
+uspendisse venenatis dolor et nunc iaculis ege</p>
+		<p class="footer-grid">Copyright &copy; 2015.Company name All rights reserved.More Templates <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a> - Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a></p>
 
-                        <div class="layui-form-item">
-                            <label class="layui-form-label">Username</label>
-                            <div class="layui-input-inline">
-                                <input type="text" name="username" required lay-verify="username"
-                                       placeholder="username" autocomplete="off" class="layui-input">
-                            </div>
-                        </div>
-                        <div class="layui-form-item">
-                            <label class="layui-form-label">Password</label>
-                            <div class="layui-input-inline">
-                                <input type="password" name="password" required lay-verify="password"
-                                       placeholder="password" autocomplete="off" class="layui-input">
-                            </div>
-                        </div>
-
-                        <div class="layui-form-item" style="float: right; margin-right: 42px;">
-
-                            <input type="checkbox" name="is_top" {{if .post.IsTop}} checked {{end}} value="1"
-                                   title="Remember Password">
-
-                        </div>
-
-                        <div class="layui-form-item">
-                            <button lay-submit class="layui-btn btn-submit" style="width: 300px; border-radius:3px"
-                                    lay-submit=""
-                                    lay-filter="sub">Login
-                            </button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </form>
-    <form action="/createPage" method="post">
-        <div class="layui-form layui-tab-content" id="LAY_ucm" style="padding-top: 0px; padding-left: 50px;  ">
-        <button lay-submit class="layui-btn btn-submit" style="width: 300px; border-radius:3px "
-                lay-submit=""
-                lay-filter="sub" >Accout Register
-        </button>
-        </div>
-    </form>
-</div>
+		</div>
+			<div class="col-md-4 footer-bottom ">
+				<h4>Muscipit dolor</h4>
+				<ul class="social-icons">
+					<li><a href="#"><span> </span> </a></li>
+					<li class="tin"><a href="#"><span> </span></a></li>
+					<li class="linked"><a href="#"><span> </span> </a></li>
+				</ul>
+			</div>
+				<div class="clearfix"> </div>
+		</div>	
+	</div>
+	 <script type="text/javascript">
+						$(document).ready(function() {
+							/*
+							var defaults = {
+					  			containerID: 'toTop', // fading element id
+								containerHoverID: 'toTopHover', // fading element hover id
+								scrollSpeed: 1200,
+								easingType: 'linear' 
+					 		};
+							*/
+							
+							$().UItoTop({ easingType: 'easeOutQuart' });
+							
+						});
+					</script>
+				<a href="#" id="toTop" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
 
 
 </body>
-<script>
-    //Demo
-    layui.use('form', function () {
-    });
-</script>
 </html>
