--- a/views/publish.html
+++ b/views/publish.html
@@ -83,29 +83,28 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<h2>发布菜单</h2>
 				<div class=" col-md-9 contact-left">
 				  
-					    <form action="/publish" method="post">
+					    <form >
 					    	<div>
 								<span>时间</span>
-								<input name="time" id="time" type="datetime-local" />
+								<input type="datetime-local" name="user_date" />
 						    </div>
 						    <div>
 								<span>地点</span>
-						    	<input name="location" id="location" type="text" class="textbox">
+						    	<input name="userEmail" type="text" class="textbox">
 						    </div>
 						    <div>
 								<span>价格区间</span>
-						    	<input name="price" id="price" type="text" class="textbox">
+						    	<input name="userEmail" type="text" class="textbox">
 						    </div>
 						    <div>
 						    	<span>菜品</span>
-						    	<textarea name="dishes" id="dishes"> </textarea>
+						    	<textarea name="userMsg"> </textarea>
 						    </div>
 						   <div>
-						   		<span><input type="submit" value="Submit"></span>
+						   		<span><input type="submit" value="提交"></span>
 						  </div>
 					    </form>
 				  </div>
-
 				<div class=" col-md-3 contact-right">
 				    </div>
 					  <div class="clearfix"></div>
